# Nemaktis

./: .gitignore  .readthedocs.yml  CMakeLists.txt  LICENSE  README.md  Taskfile.yml  pyproject.toml
.github/workflows/: package.yml
BeamPropagationSolver/: CMakeLists.txt  README  README.md  conda_dev.sh  pyproject.toml
BeamPropagationSolver/scripts/: FindMuParser.cmake
BeamPropagationSolver/src/: .ycm_extra_conf.py  compile_commands.json  main.cpp
BeamPropagationSolver/src/BPMOperatorLib/: BaseBPMOperator.cpp  BaseBPMOperator.h  BlockSparseMatrix.cpp  BlockSparseMatrix.h  OpticalField.h  ParaxialPrimaryEvolutionOperator.cpp  ParaxialPrimaryEvolutionOperator.h  PhaseEvolutionOperator.cpp  PhaseEvolutionOperator.h  TransparentBoundaryConditions.cpp  TransparentBoundaryConditions.h
BeamPropagationSolver/src/BeamPropagationLib/: ADIOperatorX.cpp  ADIOperatorX.h  ADIOperatorY.cpp  ADIOperatorY.h  BPMIteration.cpp  BPMIteration.h  BaseADIOperator.cpp  BaseADIOperator.h  BaseBPMOperator.cpp  BaseBPMOperator.h  BlockSparseMatrix.cpp  BlockSparseMatrix.h  CartesianMesh.h  FresnelOperator.cpp  FresnelOperator.h  OpticalField.h  OpticalFieldCollection.cpp  OpticalFieldCollection.h  ParaxialPrimaryEvolutionOperator.cpp  ParaxialPrimaryEvolutionOperator.h  PhaseEvolutionOperator.cpp  PhaseEvolutionOperator.h  PhaseOperator.cpp  PhaseOperator.h  SimpleShiftOperator.cpp  SimpleShiftOperator.h  TriDiagonalADIOperator.cpp  TriDiagonalADIOperator.h
BeamPropagationSolver/src/BeamPropagationLib_old/: ADIOperatorY.h  BPMIteration.cpp  BPMIteration.h  BaseADIOperator.h  FresnelOperator.h  TriDiagonalADIOperator.h
BeamPropagationSolver/src/PhysicsLib/: BeamProfile.cpp  BeamProfile.h  PermittivityTensorField.cpp  PermittivityTensorField.h  PermittivityTensorField_old.cpp  PermittivityTensorField_old.h  PhysicsCoefficients.cpp  PhysicsCoefficients.h
BeamPropagationSolver/src/PostprocessorLib/: PostprocessorBase.cpp  PostprocessorBase.h  ScreenOutput.cpp  ScreenOutput.h  VolumeOutput.cpp  VolumeOutput.h
BeamPropagationSolver/src/PythonBackend/: bpm_backend.cpp  bpm_backend.h  bpm_backend.i  setup.py.in
BeamPropagationSolver/src/SettingsLib/: AlgorithmSettings.cpp  AlgorithmSettings.h  BaseSettings.cpp  BaseSettings.h  PhysicsSettings.cpp  PhysicsSettings.h  PostprocessorSettings.cpp  PostprocessorSettings.h  RootSettings.cpp  RootSettings.h
BeamPropagationSolver/src/UtilitiesLib/: VTIReader.cpp  VTIReader.h  VectorField.cpp  VectorField.h  error.h
HighLevelPythonInterface/: CMakeLists.txt  setup.py
HighLevelPythonInterface/examples/: droplet_example.py  toron_example.py
HighLevelPythonInterface/examples/benchmarks/2D/: 01_run_bpm_benchmarks.py  02_run_dtmm_benchmarks.py  03_plot_errors.py
HighLevelPythonInterface/examples/benchmarks/3D/: 01_run_bpm_benchmarks.py  02_run_dtmm_benchmarks.py  03_plot_errors.py  propagate_fields.py
HighLevelPythonInterface/nemaktis/: __init__.py  field_viewer.py  field_viewer_ui.py  lc_material.py  light_propagator.py
RayTracingSolver/: CMakeLists.txt
RayTracingSolver/scripts/: FindEigen3.cmake
RayTracingSolver/src/: .gdbinit  .ycm_extra_conf.py  main.cpp
RayTracingSolver/src/MappingLib/: CubicInterpolatedMapping.cpp  CubicInterpolatedMapping.h  HCInverseSolver.cpp  HCInverseSolver.h  InverseScreenMap.cpp  InverseScreenMap.h  LinearInterpolatedMapping.cpp  LinearInterpolatedMapping.h  Mapping.cpp  Mapping.h
RayTracingSolver/src/PropagationLib/: FresnelTransmission.cpp  FresnelTransmission.h  ODEFunction.cpp  ODEFunction.h  RayBundle.cpp  RayBundle.h  RayStepper.cpp  RayStepper.h
RayTracingSolver/src/SimulationLib/: DropletSampleSimulation.cpp  DropletSampleSimulation.h  FullSampleSimulation.cpp  FullSampleSimulation.h  LightSource.cpp  LightSource.h  RayFamily.cpp  RayFamily.h  Simulation.cpp  Simulation.h
RayTracingSolver/src/UtilitiesLib/: CartesianMesh.cpp  CartesianMesh.h  DefinitionDomain.cpp  DefinitionDomain.h  MaterialProperties.cpp  MaterialProperties.h  VTIData.cpp  VTIData.h  linalg.h
cmake/: FindMuParser.cmake
conda_recipe/: bld.bat  build.bat  build.sh  conda_build_config.yaml  meta.yaml  recipe.yaml
dev/: environment-dev.txt
doc/: environment.yml  requirements.txt
doc/source/: conf.py  index.rst
doc/source/_static/: fig_koehler.html  observable.js
doc/source/backends/: dtmm.rst
doc/source/high_level/: api.rst  tutorial.rst
doc/source/intro/: benchmarks.rst  installation.rst  microscopy_model.rst  overview.rst
